--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ html {
 h1, h2, h3, h4, h5, h6, p, ul, ol {margin: 0}
 a {text-decoration: none;}
 img {max-width: 100%;}
+ul, ol {padding: 0;margin: 0;}
 
 body {
     font-family: 'Roboto Condensed', sans-serif;
@@ -32,12 +33,15 @@ nav {
     position: relative;
 }
 .nav-left {
-    height: 48px;
-    width: 48px;
-    background-color: black;
-    margin-left: 12px;
+    height: 64px;
+    width: 64px;
+    border-radius: 10px;
     align-self: start;
     margin: 12px;
+    background-image: url(/assets/images/logo.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .nav-right {
     transition: 1s;
@@ -103,13 +107,16 @@ header {
 .title {
     color: var(--primary-white);
     text-transform: uppercase;
-    font-size: 4rem;
+    font-size: 6rem;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: .1s;
+    cursor: default;
 }
+.title:hover {text-shadow: 0 0 4px var(--primary-white);}
 .header-description {
     position: absolute;
     margin: 0;
@@ -125,6 +132,7 @@ header {
 #about {
     background-color: var(--second-black);
     padding: 64px 0;
+    min-height: 50vh;
 }
 .about-card {
     max-width: 60%;
@@ -148,6 +156,10 @@ header {
 }
 .about-card h3 {
     margin-bottom: 16px;
+    font-size: 3rem;
+}
+.about-card p {
+    font-size: 2rem;
 }
 .about-card:nth-child(2) {
     display: grid;
@@ -179,7 +191,7 @@ header {
     background-image: url(../assets/icons/js.svg);
 }
 .icon-tile:nth-child(4) {
-    background-image: url(../assets/icons/react.svg);
+    background-image: url(../assets/icons/webpack.svg);
 }
 /* ------------------------------------------------------ */
 #projects {
@@ -269,16 +281,44 @@ footer {
     background-color: var(--primary-black);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 12px;
 }
 .footer-left ul li {
     display: block;
     list-style: none;
-    padding: 4px;
 }
 .footer-left ul li a {
     color: var(--primary-white);
+    display: block;
+    font-size: 18px;
+    margin: 12px;
 }
+.footer-left ul li a i {
+    display: none;
+}
+.bxl-facebook-circle:hover {
+    color: #1871E7;
+}
+.bxl-linkedin-square:hover {
+    color: #0071ae;
+}
+.bxl-github:hover {
+    color: #000;
+}
+.footer-right {
+    width:  82px;
+    height: 82px;
+    background-image: url(../assets/images/logo.png);
+    background-position:  center;
+    background-size: 64px;
+    background-repeat: no-repeat;
+    background-color: var(--primary-white);
+    border-radius: 50%;
+    box-sizing: border-box;
+    display: block;
+}
+
 
 @media screen and (min-width: 768px) {
 
@@ -301,6 +341,16 @@ footer {
         grid-template-columns: repeat(auto-fill, 70px);
         justify-content: start;
         overflow-x: auto;
+    }
+    .footer-left ul li {
+        display: inline-block;
+    }
+    .footer-left ul li a i{
+        display: inline-block;
+        font-size: 64px;
+    }
+    .footer-left ul li a span {
+        display: none;
     }
 
 }
