--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ nav {
     align-items: center;
     position: relative;
 }
+nav.active {
+    background-color: var(--action-color);
+
+}
 .nav-left {
     height: 64px;
     width: 64px;
@@ -47,7 +51,13 @@ nav {
     transition: 1s;
     display: none;
 }
-.nav-right.active {display: block;align-self: stretch;}
+.nav-right.active {
+    display: block;
+    align-self: stretch;
+    background-color: var(--action-color);
+    position: relative;
+    z-index: 2;
+}
 
 .nav-right ul {
     width: 100%;
@@ -66,6 +76,10 @@ nav {
     font-weight: bold;
     padding: 12px;
     display: block;
+    transition: .1s;
+}
+.nav-links:hover {
+    background-color: var(--primary-black);
 }
 .burger-button {
     position: absolute;
@@ -104,19 +118,15 @@ header {
     background-repeat: no-repeat;
     position: relative;
 }
-.title {
-    color: var(--primary-white);
-    text-transform: uppercase;
-    font-size: 6rem;
-    text-align: center;
+.banner {
+    width: 300px;
+    height: 360px;
     position: absolute;
-    top: 50%;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    transition: .1s;
-    cursor: default;
+    z-index: 0;
 }
-.title:hover {text-shadow: 0 0 4px var(--primary-white);}
 .header-description {
     position: absolute;
     margin: 0;
@@ -331,6 +341,10 @@ footer {
 
     .nav-right ul {display: flex}
     .burger-button {display: none}
+    .nav-links:hover {
+        background-color: transparent;
+        text-decoration: underline;
+    }
 
     .about-card {
         flex-direction: row;
