--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,10 @@
 @import url(./main.css);
 
+#Contact {
+  min-height: 100vh;
+  position: relative;
+}
+
 .contact-title {
   padding:          30px;
   font-size:        3rem;
@@ -33,8 +38,12 @@
 
 }
 .footer {
+  bottom:             0;
+  left:               0;
+  right:              0;
   height:             150px;
   display:            flex;
+  position:           relative;
   align-items:        center;
   justify-content:    space-between;
   background-color:   var(--regular-black);
