--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -1,7 +1,14 @@
 @import url(@styles/main.css);
 
+#Portfolio {
+  min-height:       100vh;
+  display:          flex;
+  flex-direction:   column;
+  justify-content:  center;
+}
+
 .portfolio-title {
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 3rem;
+  font-size:        3rem;
+  font-weight:      bold;
+  text-transform:   uppercase;
 }
