--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -9,7 +9,7 @@
 
 }
 .card-info {
-  width:            300px;
+  width:            90%;
   padding:          32px;
   border-radius:    24px;
   margin:           0 auto 48px;
@@ -27,10 +27,44 @@
 .card-info p {
   text-align:     justify;
   font-size:      1.8rem;
+  margin-bottom:  32px;
 }
 .skills-container {
   gap:              24px;
   display:          flex;
   flex-wrap:        wrap;
   justify-content:  center;
+}
+
+@media screen and (min-width: 500px) {
+  .card-info {
+    width:      75%;
+    padding:    24px;
+    max-width:  600px;
+  }
+  .card-info h3 {
+    font-size: 2.2rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .card-info {
+    width: 90%;
+    max-width: 1000px;
+  }
+  .info-about-me {
+    gap:              10%;
+    padding:          24px;
+    display:          flex;
+    align-items:      center;
+    justify-content:  space-around;
+  }
+  .info-container {
+    padding: 4px;
+  }
+  .card-info > img {
+    margin:   0;
+    padding:  12px;
+    height:   250px;
+  }
 }
