--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,8 +1,9 @@
 @import url(./main.css);
 
 #Contact {
-  min-height: 100vh;
-  position: relative;
+  min-height:       100vh;
+  padding-bottom:    150px;
+  position:         relative;
 }
 
 .contact-title {
@@ -13,12 +14,15 @@
   text-transform:   uppercase;
 }
 .contact-form {
-  gap:            16px;
-  width:          300px;
-  margin:         0 auto;
-  display:        flex;
-  margin-bottom:  64px;
-  flex-direction: column;
+  width:            90%;
+  padding:          32px;
+  gap:              16px;
+  border-radius:    32px;
+  margin-bottom:    64px;
+  display:          flex;
+  flex-direction:   column;
+  margin:           0 auto;
+  background-color: var(--soft-black);
 }
 .textfield {
   width:          100%;
@@ -31,11 +35,15 @@
   padding:          12px;
   font-size:        1.4rem;
   border-radius:    12px;
+  cursor:           pointer;
   font-weight:      bold;
   text-transform:   uppercase;
+  transition:       all .2s ease;
   color:            var(--pure-white);
   background:       var(--second-color);
-
+}
+.contact-button:hover {
+  background-color: var(--regular-black);
 }
 .footer {
   bottom:             0;
@@ -43,7 +51,7 @@
   right:              0;
   height:             150px;
   display:            flex;
-  position:           relative;
+  position:           absolute;
   align-items:        center;
   justify-content:    space-between;
   background-color:   var(--regular-black);
@@ -62,7 +70,14 @@
 .footer-logo img {
   width:              100px;
   height:             100px;
-  margin-right:             24px;
+  margin-right:       24px;
   border-radius:      50%;
   background-color:   var(--pure-white);
+}
+
+@media screen and (min-width: 500px) {
+  .contact-form {
+    width: 75%;
+    max-width: 600px;
+  }
 }
