--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -6,9 +6,9 @@
   margin:           0 auto;
   margin-bottom:    24px;
   border-radius:    12px;
+  display:          flex;
   font-weight:      bold;
   overflow:         hidden;
-  display:          flex;
   align-items:      center;
   justify-content:  stretch;
   color:            var(--pure-white);
@@ -38,5 +38,16 @@
   }
   .project-image {
     width: 200px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .project-container {
+    width: 300px;
+  }
+  .project-name {
+    width: calc(100% - 200px);
+    padding: 12px 4px;
+    display: block;
   }
 }
