--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -22,7 +22,7 @@
   flex-direction:   column;
   margin:           0 auto;
   margin-bottom:    64px;
-  background-color: var(--soft-black);
+  background-color: rgba(34, 34, 34, 0.5);
 }
 .textfield {
   width:          100%;
@@ -43,6 +43,7 @@
   background:       var(--second-color);
 }
 .contact-button:hover {
+  color: var(--second-color);
   background-color: var(--regular-black);
 }
 .footer {
