--- a/src/styles/ContactLink.css
+++ b/src/styles/ContactLink.css
@@ -1,1 +1,9 @@
 @import url(./main.css);
+
+
+@media screen and (min-width: 700px) {
+  .contact-link {
+    display: inline-block;
+    padding: 8px;
+  }
+}
