--- a/src/styles/Skill.css
+++ b/src/styles/Skill.css
@@ -4,6 +4,10 @@
   width: 70px;
   border-radius: 10px;
   background-color: var(--regular-black);
+  transition: all .4s;
+}
+.skill-container:hover {
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
 }
 .skill-container img {
   margin:         0;
