--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,23 +1,22 @@
-.header__container {
-  top:            50%;
-  left:           50%;
+.main__container {
   width:          70%;
   min-width:      272px;
   max-width:      1200px;
   min-height:     460px;
   margin:         0 auto;
+  margin-top:     100px;
+  margin-bottom:  24px;
   padding:        24px;
-  margin-top:     84px;
   border-radius:  24px;
   overflow:       hidden;
-  position:       absolute;
   border:         2px solid var(--ultramarine-blue);
-  transform:      translate(-50%, -50%);
+
+  
 }
-.profile__image {
+.main__image {
   width:          75%;
   min-width:      150px;
-  max-width:      400px;
+  max-width:      300px;
   margin:         0 auto;
   object-fit:     contain;
   margin-bottom:  24px;
@@ -63,6 +62,7 @@
 }
 .button__second {
   line-height:      44px;
+  font-size:        1.4rem;
   color:            var(--ultramarine-blue);
   border:           2px solid var(--ultramarine-blue);
 }
