--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,7 +26,7 @@
   align-items:      stretch;
   justify-content:  center;
   flex-direction:   column;
-  position:         absolute;
+  position:         fixed;
   background-color: var(--space-cadet);
   transform:        translateX(-100%);
   transition:       .4s ease;
