--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,14 +6,16 @@
   color:            var(--ultramarine-blue);
 }
 .about__content {
+  max-width:        600px;
   font-size:        1.6rem;
+  margin:           0 auto;
   font-weight:      lighter;
   text-align:       justify;
   color:            var(--ghost-white);
 }
 .skills__container {
   gap:              24px;
-  width:            100%;
+  max-width:        600px;
   margin-top:       100px;
   padding:          24px;
   border-radius:    16px;
@@ -22,5 +24,6 @@
   margin:           0 auto;
   align-items:      center;
   justify-content:  center;
+  width:            fit-content;
   border:           2px solid var(--ultramarine-blue);
 }
