--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,7 +2,13 @@
   color:            var(--manatee);
   font-family:      Outfit, sans-serif;
 }
+.contact__container {
+  max-width:        768px;
+  margin-bottom:    152px;
+}
 .contact__form {
+  max-width:        600px;
+  margin:           0 auto;
   display:          flex;
   align-items:      stretch;
   flex-direction:   column;
@@ -54,7 +60,7 @@
   min-height:       100px;
   display:          flex;
   align-items:      center;
-  position:         absolute;
+  position:         fixed;
   justify-content:  space-between;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
   background-color: var(--smoky-black);
