--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -47,23 +47,18 @@
   font-family: Outfit, sans-serif;
 }
 .contact__footer {
-  left:             0;
-  right:            0;
-  bottom:           0;
   padding:          8px 24px;
-  min-height:       100px;
+  border-radius:    12px;
   display:          flex;
   align-items:      center;
-  position:         absolute;
-  justify-content:  space-between;
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
-  background-color: var(--smoky-black);
+  justify-content:  center;
+  width:            fit-content;
+  margin:           0 auto 24px;
+  border:           2px solid var(--ultramarine-blue);
 }
-.footer__image {
-  width:            80px;
-  height:           80px;
-  padding:          4px;
-  border-radius:    50%;
-  object-fit:       cover;
-  background-color: var(--ghost-white);
+.footer__list {
+  gap:              8px;
+  display:          flex;
+  align-items:      center;
+  justify-content:  center;
 }
