--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -3,7 +3,7 @@
   width:              70px;
   border-radius:      10px;
   position:           relative;
-  box-shadow:         4px 4px 8px rgba(0, 0, 0, 0.25);
+  box-shadow:         4px 4px 8px var(--shadow-color);
   background-color:   var(--space-cadet);
 }
 .skill__tile img {
