--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -13,7 +13,7 @@
 .portfolio__title {
   font-size:          3.2rem;
   padding-top:        32px;
-  margin-bottom:      42px;
+  margin:             32px 0 48px;
   text-align:         center;
   color:              var(--primary-color);
 }
@@ -22,19 +22,11 @@
   object-fit:         cover;
 }
 .projects__grid {
-  gap:              24px;
-  display:          grid;
+  gap:              12px;
   overflow-x:       auto;
-  grid-auto-flow:   column;
   padding:          0 24px;
-  margin:           0 auto;
-}
-
-@media screen and (min-width: 1000px) {
-  .projects__grid {
-    max-width:              1200px;
-    justify-content:        center;
-    grid-auto-flow:         row;
-    grid-template-columns:  repeat(4, 1fr);
-  }
+  
+  display:          flex;
+  flex-wrap:        wrap;
+  justify-content:  center;
 }
