--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -4,7 +4,7 @@
   border-radius:      10px;
   position:           relative;
   box-shadow:         4px 4px 8px var(--shadow-color);
-  background-color:   var(--space-cadet);
+  background-color:   var(--blue-active);
 }
 .skill__tile img {
   top:                50%;
