--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,9 +2,9 @@
   --gray:               #9999A1;  
   --white:              #F0EFF4;
   --black:              #161616;
-  --main-blue:          #02182B;
+  --main-blue:          #03203A;
   --blue-active:        #053661;
-  --blue-inactive:      #010B13;
+  --blue-inactive:      #02111D;
   --primary-color:      #4361EE;
   --shadow-color:       #00000033;
 
