--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,8 +1,9 @@
 ::placeholder {
   color:            var(--gray);
-  font-family:      Outfit, sans-serif;
 }
 .contact__form {
+  width:            100%;
+  max-width:        500px;
   display:          flex;
   align-items:      stretch;
   flex-direction:   column;
@@ -28,7 +29,6 @@
   font-weight:      400;
   display:          block;
   font-size:        1.6rem;
-  font-family:      Outfit, sans-serif;
 }
 .contact__message {
   min-height: 150px;
@@ -36,29 +36,58 @@
 .contact__button {
   display:          block;
   margin:           12px auto;
-  width:            120px;
-  height:           32px;
+  width:            100%;
+  height:           40px;
   font-size:        1.6rem;
   font-weight:      500;
-  border-radius:    16px;
+  border-radius:    12px;
   text-transform:   uppercase;
   color:            var(--white);
   background-color: var(--primary-color);
-  font-family: Outfit, sans-serif;
+  transition:       .4s ease;
 }
-.contact__footer {
-  padding:          8px 24px;
-  border-radius:    12px;
-  display:          flex;
-  align-items:      center;
-  justify-content:  center;
-  width:            fit-content;
-  margin:           0 auto 24px;
-  border:           2px solid var(--primary-color);
+.contact__button:hover {
+  color: var(--primary-color);
+  background-color: var(--white);
 }
-.footer__list {
-  gap:              8px;
-  display:          flex;
-  align-items:      center;
-  justify-content:  center;
+.links__container {
+  padding: 12px;
+  margin-top: 24px;
+  border: 2px solid var(--primary-color);
+  border-radius: 12px;
+}
+.link {
+  display: inline-block;
+  margin: 0 8px;
+}
+.link__icon {
+  font-size: 36px;
+  fill: var(--white);
+}
+.link__caption {
+  display: none;
+  cursor: pointer;
+}
+.link__icon:hover, .link__caption:hover {
+  color: var(--primary-color);
+  fill: var(--primary-color);
+  transition: .4s ease;
+}
+
+
+@media screen and (min-width: 700px) {
+  .contact__form {
+    border: 2px solid var(--primary-color);
+    border-radius: 12px;
+    padding: 48px;
+  }
+  
+  .link__icon {
+    display: none;
+  }
+  .link__caption {
+    color: var(--white);
+    font-size: 1.6rem;
+    display: inline-block;
+  }
 }
