--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -51,3 +51,26 @@
   border-color:     var(--white);
   background-color: var(--white);
 }
+
+@media screen and (min-width: 700px) {
+  .main__container.home__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    place-content: center;
+    place-items: center;
+    min-height: 500px;
+  }
+  .home__image {
+    grid-column: 2 /3;
+    grid-row: 1/3;
+  }
+  .home__info {
+    align-self: end;
+    margin-bottom: 0;
+  }
+  .buttons__container {
+    align-self: start;
+    margin-top: 48px;
+  }
+}
