[REFACTOR] Switching the CSS variables to Sass variables.

--- a/src/styles/MainContainer.scss
+++ b/src/styles/MainContainer.scss
@@ -1,3 +1,5 @@
+@import './global.scss';
+
 .main__container {
   width: 85%;
   margin: 48px;
@@ -5,7 +7,7 @@
   min-width: 272px;
   max-width: 1200px;
   border-radius: 12px;
-  border: 2px solid var(--primary-color);
+  border: 2px solid $primary-color;
 
   display: flex;
   align-items: center;
