--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,3 +1,5 @@
+@import './global.scss';
+
 .about {
   &__logo {
     width: 75%;
@@ -8,14 +10,14 @@
   &__title {
     font-size: 3.2rem;
     margin: 64px 0 48px;
-    color: var(--primary-color);
+    color: $primary-color;
   }
   &__info {
     max-width: 600px;
     font-size: 1.6rem;
     font-weight: 300;
     text-align: justify;
-    color: var(--white);
+    color: $white;
   }
 }
 
@@ -24,7 +26,7 @@
   max-width: 600px;
   padding: 24px;
   border-radius: 16px;
-  border: 2px solid var(--primary-color);
+  border: 2px solid $primary-color;
 
   display: flex;
   flex-wrap: wrap;
