--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,5 +1,7 @@
+@import './global.scss';
+
 ::placeholder {
-  color: var(--gray);
+  color: $gray;
 }
 .contact {
   &__form {
@@ -14,13 +16,13 @@
     font-size: 3.2rem;
     margin: 24px 0;
     text-align: center;
-    color: var(--primary-color);
+    color: $primary-color;
   }
   &__label {
     width: 100%;
     display: block;
     margin: 8px auto;
-    color: var(--white);
+    color: $white;
   }
   &__input {
     padding: 8px;
@@ -43,20 +45,20 @@
     font-weight: 500;
     border-radius: 12px;
     text-transform: uppercase;
-    color: var(--white);
-    background-color: var(--primary-color);
+    color: $white;
+    background-color: $primary-color;
     transition: 0.4s ease;
 
     &:hover {
-      color: var(--primary-color);
-      background-color: var(--white);
+      color: $primary-color;
+      background-color: $white;
     }
   }
 }
 .links__container {
   padding: 12px;
   margin-top: 24px;
-  border: 2px solid var(--primary-color);
+  border: 2px solid $primary-color;
   border-radius: 12px;
 }
 .link {
@@ -65,7 +67,7 @@
 
   &__icon {
     font-size: 36px;
-    fill: var(--white);
+    fill: $white;
   }
   &__caption {
     display: none;
@@ -74,14 +76,14 @@
 }
 .link__icon:hover,
 .link__caption:hover {
-  color: var(--primary-color);
-  fill: var(--primary-color);
+  color: $primary-color;
+  fill: $primary-color;
   transition: 0.4s ease;
 }
 
 @media screen and (min-width: 700px) {
   .contact__form {
-    border: 2px solid var(--primary-color);
+    border: 2px solid $primary-color;
     border-radius: 12px;
     padding: 48px;
   }
@@ -90,7 +92,7 @@
     display: none;
   }
   .link__caption {
-    color: var(--white);
+    color: $white;
     font-size: 1.6rem;
     display: inline-block;
   }
