--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,3 +1,5 @@
+@import './global.scss';
+
 .home__image {
   width: 75%;
   max-width: 300px;
@@ -13,13 +15,13 @@
 .home__description {
   font-weight: 500;
   font-size: 1.8rem;
-  color: var(--gray);
+  color: $gray;
 }
 .home__title {
   font-size: 3rem;
   font-weight: 500;
   margin: 4px;
-  color: var(--white);
+  color: $white;
 }
 .buttons__container {
   gap: 8px;
@@ -37,21 +39,21 @@
   transition: all 0.4s;
 }
 .primary__button {
-  color: var(--white);
-  background-color: var(--primary-color);
+  color: $white;
+  background-color: $primary-color;
 }
 .second__button {
   font-weight: 600;
   line-height: 48px;
   font-size: 1.4rem;
-  color: var(--blue-inactive);
-  background-color: var(--blue-active);
+  color: $blue-inactive;
+  background-color: $blue-active;
 }
 .primary__button:hover,
 .second__button:hover {
-  color: var(--primary-color);
-  border-color: var(--white);
-  background-color: var(--white);
+  color: $primary-color;
+  border-color: $white;
+  background-color: $white;
 }
 
 @media screen and (min-width: 700px) {
