--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -1,21 +1,24 @@
-.projects__grid::-webkit-scrollbar-thumb {
-  background-color: var(--space-cadet);
-  border-radius: 4px;
-}
-.projects__grid::-webkit-scrollbar-thumb:hover {
-  background-color: var(--primary-color);
-}
+@import './global.scss';
+
 .projects__grid::-webkit-scrollbar {
   height: 8px;
   border-radius: 3px;
-  background-color: var(--main-blue);
+  background-color: $main-blue;
+
+  &-thumb {
+    background-color: $space-cadet;
+    border-radius: 4px;
+  }
+  &-thumb:hover {
+    background-color: $primary-color;
+  }
 }
 .portfolio__title {
   font-size: 3.2rem;
   padding-top: 32px;
   margin: 32px 0 48px;
   text-align: center;
-  color: var(--primary-color);
+  color: $primary-color;
 }
 .portfolio__image {
   width: 100%;
