[STYLE] Remade the navbar style with a light theme by default.

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -21,7 +21,7 @@
   font-size: 3rem;
   font-weight: 500;
   margin: 4px;
-  color: $white;
+  color: $black;
 }
 .buttons__container {
   gap: 8px;
