--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 $main-blue: #03203a;
 $gray: #9999a1;
-$white: #f0f7f4;
+$white: #e5ebeb;
 $black: #161616;
 $blue-active: #053661;
 $blue-inactive: #02111d;
