--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -3,40 +3,40 @@
 .navbar {
   top: 0;
   left: 0;
-  gap: 32px;
   width: 100%;
   height: 64px;
   position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid $blue-active;
-  background-color: $main-blue;
+
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba($black, 0.1);
 
   &__icon {
-    width: 48px;
-    height: 48px;
-
+    width: 64px;
+    height: 64px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-bottom: 4px solid transparent;
+
+    padding: 8px;
+    transition: all 400ms;
 
     & span {
-      font-size: 1.4rem;
-      color: $blue-active;
+      font-size: 1.2rem;
+      color: $gray;
     }
-
-    &:hover svg,
-    &:hover span {
-      color: $primary-color;
-      fill: $primary-color;
+    &:hover,
+    &.active {
+      border-bottom: 4px solid $primary-color;
     }
-
     & svg {
-      fill: $blue-active;
       width: 48px;
       height: 48px;
+      fill: $gray;
     }
   }
 }
