--- a/src/styles/MainContainer.scss
+++ b/src/styles/MainContainer.scss
@@ -7,7 +7,9 @@
   min-width: 272px;
   max-width: 1200px;
   border-radius: 12px;
-  border: 2px solid $primary-color;
+
+  background-color: white;
+  box-shadow: 2px 2px 4px rgba($black, 0.2);
 
   display: flex;
   align-items: center;
