[STYLES] Changed the theme in the About Page

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -4,8 +4,11 @@
   &__logo {
     width: 75%;
     min-width: 200px;
-    max-width: 375px;
+    max-width: 300px;
     margin-top: 48px;
+
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    z-index: 1;
   }
   &__title {
     font-size: 3.2rem;
@@ -15,9 +18,9 @@
   &__info {
     max-width: 600px;
     font-size: 1.6rem;
-    font-weight: 300;
+    font-weight: 400;
     text-align: justify;
-    color: $white;
+    color: $black;
   }
 }
 
@@ -26,7 +29,6 @@
   max-width: 600px;
   padding: 24px;
   border-radius: 16px;
-  border: 2px solid $primary-color;
 
   display: flex;
   flex-wrap: wrap;
