--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -6,7 +6,7 @@
   border-radius: 10px;
   position: relative;
   box-shadow: 4px 4px 8px $shadow-color;
-  background-color: $blue-active;
+  background-color: $main-blue;
 
   & img {
     top: 50%;
