--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 
   background-color: white;
   box-shadow: 0px 2px 4px rgba($black, 0.1);
