--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -27,10 +27,10 @@
 .projects__grid {
   gap: 24px;
   overflow-x: auto;
-  padding: 0 24px;
+  // padding: 0 24px;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   place-content: center;
   place-items: center;
   align-self: stretch;
