--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -7,6 +7,8 @@
     max-width: 300px;
     margin-top: 48px;
 
+    grid-area: 1 / 1 / 3 / 2;
+
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     z-index: 1;
   }
@@ -14,6 +16,7 @@
     font-size: 3.2rem;
     margin: 64px 0 48px;
     color: $primary-color;
+    text-align: center;
   }
   &__info {
     max-width: 600px;
@@ -34,4 +37,13 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .main__container.about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-content: center;
+    place-items: center;
+  }
 }
