--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -28,6 +28,7 @@
 
     & span {
       font-size: 1.2rem;
+      user-select: none;
       color: $gray;
     }
     &:hover span,
@@ -42,6 +43,32 @@
       width: 48px;
       height: 48px;
       fill: $gray;
+    }
+  }
+}
+.settings__icon {
+  position: relative;
+}
+.navbar__aside {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  border-radius: 8px;
+  border: 1px solid $gray;
+  position: absolute;
+  right: 4px;
+  bottom: -8px;
+  background-color: white;
+  transform: translateY(calc(100%));
+  overflow: hidden;
+
+  & button {
+    padding: 8px 18px;
+    border: transparent;
+    border-radius: 0;
+    &:hover {
+      background-color: $primary-color;
+      color: white;
     }
   }
 }
